Added a colour picker (PixiEditor/ColorPicker) to replace the windows forms one. I couldn't get the nuget package to work so I added the project to this solution. Click one of the colours on the bottom to show a dialog. Enter to confirm, esc to cancel

--- a/Gpic/Gpic.csproj
+++ b/Gpic/Gpic.csproj
@@ -92,7 +92,6 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -147,6 +146,9 @@
     <Compile Include="Resources\IconTypeToImageSourceConverter.cs" />
     <Compile Include="Services\ClipboardService.cs" />
     <Compile Include="Services\ColourPickerService.cs" />
+    <Compile Include="Services\ColourPickers\ColourPickerWindow.xaml.cs">
+      <DependentUpon>ColourPickerWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Services\WinExplorerService.cs" />
     <Compile Include="Shortcuts\ActivationHandlerReference.cs" />
     <Compile Include="Shortcuts\Bindings\InputStateBinding.cs" />
@@ -345,6 +347,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Services\ColourPickers\ColourPickerWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Shortcuts\Dialogs\KeyStrokeInputWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -473,6 +479,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ColorPicker\ColorPicker.csproj">
+      <Project>{99a1fe30-81be-4808-8151-c6988227b5a3}</Project>
+      <Name>ColorPicker</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Gpic.Core\Gpic.Core.csproj">
       <Project>{888ab152-f517-4365-a9b9-cbfc53fbaeac}</Project>
       <Name>Gpic.Core</Name>
